--- a/src/components/Character/Character.css
+++ b/src/components/Character/Character.css
@@ -2,11 +2,14 @@
   width: 18rem;
 }
 
+.card-title {
+  margin-top: 5px;
+  text-align: center;
+}
+
 @media screen and (max-width: 768px) {
   .card {
     width: 100%;
-    height: 100%;
-    margin-bottom: 3rem;
   }
   .card-img-top {
     width: 100%;
